tests/baselines/reference/privateNameInInExpressionUnused.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionUnused.ts(4,22): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionUnused.ts (1 errors) ====
    // TODO(aclaymore): verify we want this behavior
    
    class Foo {
        private readonly unused: undefined; // expect unused error
                         ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        readonly #brand: undefined; // expect no error
    
        isFoo(v: any): v is Foo {
            // This should count as using/reading '#p1'
            return #brand in v;
        }
    }
    